# oski-football-pool

./: .gitignore  .pre-commit-config-minimal.yaml  .pre-commit-config-simple.yaml  .secrets.baseline  .trufflehog.yaml  .~lock.2025-2026 Football Schedule.xlsx#  Makefile  PROJECT_STRUCTURE.md  README.md  api_usage.json  pool_tracker.db  pyproject.toml  setup.py
config/: .env.example
config/prompts/: contrarian_analysis_prompt.txt  requirements-dev.txt  requirements.txt  test_prompt.txt
data/: pool_tracker.db
data/excel/: .~lock.Week_1_Picks_2025-09-17.xlsx#  Dawgpac25.xlsx
data/json/: 2025-09-17_contrarian_prompt_chatgpt5.json  2025-09-17_contrarian_prompt_grok.json  api_usage.json  automation.json  cache_odds_week_3.json  llm_data_week_3.json  submission_log_4.json  week_1_combined_analysis.json  week_1_complete_contrarian_analysis.json  week_1_contrarian_analysis.json  week_1_contrarian_picks.json  week_1_contrarian_picks_fixed.json  week_1_enhanced_contrarian_analysis.json  (+8 more)
docs/: API_SETUP_GUIDE.md  CONTRARIAN_STRATEGY_IMPLEMENTATION.md  CURRENT_API_STATUS.md  IMPLEMENTATION_STATUS.md  LIVE_DATA_IMPLEMENTATION.md  MARKDOWN_REPORT_SYSTEM.md  MAXIMUM_EARNINGS_TODO.md  OUTPUT_ORGANIZATION.md  PROMPT_LOCATION_UPDATE.md  QUICK_START_MULTI_LLM.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  WEEKLY_WORKFLOW_COMMAND.md  api-integration.md  api-reference.md  automation-guide.md  automation-summary.md  cli-reference.md  competitive-analysis-framework.md  complete-guide.md  examples.md  mcp-integration.md  multi-analysis-strategy.md  optimal-strategy-guide.md  pool-rules-prettified.md  quick-reference.md  strategy-guide.md  test-coverage-guide.md  troubleshooting.md  week-1-strategy-analysis.md  week-3-analysis-summary.md
examples/: competitor_picks.json  week_1_manual_chatgpt.json  week_1_manual_claude.json
football_pool/: __init__.py  automation.py  cli.py  competitor_tracking.py  contrarian_prompts.py  core.py  database.py  excel_automation.py  injury_data.py  log_viewer.py  logging_config.py  models.py  multi_llm_analyzer.py  report_generator.py  value_optimization.py  weather_data.py  web_search.py
reports/: CHANGELOG.md  CONTRARIAN_WORKFLOW.md  CONTRIBUTING.md  EXCEL_WORKFLOW.md  FB2022-rules.md  Pool_Week_1_Contrarian_Analysis_Summary.md  README.md  SECURITY.md  Summary Form Directions25.doc  Summary Form Directions25.md  WEEKLY_WORKFLOW.md
src/: pool_analyzer.py  pool_core.py
tests/: __init__.py  run_tests.py  test_cli.py  test_cli_date_handling.py  test_core.py  test_core_date_validation.py  test_database.py  test_date_validation.py  test_excel_automation.py  test_game_coverage.py  test_game_limit_validation.py  test_models.py
(+24 files in other folders)
